# vrl-parser

./: Cargo.toml  README.md
src/: error.rs  lib.rs  nom.rs  parser.rs  token.rs
src/parser/: comment.rs  container.rs  eoe.rs  expression.rs  ident.rs  literal.rs  whitespace.rs
src/parser/container/: group.rs
src/parser/literal/: bool.rs  float.rs  integer.rs  null.rs  regex.rs  string_interpreted.rs  string_raw.rs  timestamp.rs
src/parser/partials/: mod.rs  string_literal_inner.rs
